Sforce8 Project Data/src/objects/TimeManagement__c.object
<CustomObject>
    <fields>
        <fullName>EnteringTime__c</fullName>
        <label>入室</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OutingTime__c</fullName>
        <label>外出</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RecordTime__c</fullName>
        <label>打刻日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkBeginTime__c</fullName>
        <label>出勤時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkDay__c</fullName>
        <label>勤怠日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkEndTime__c</fullName>
        <label>退勤時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkerName__c</fullName>
        <label>従業員名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkerRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>従業員</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WorkerRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>勤怠管理</label>
    <nameField>
        <displayFormat>TIME_{YYYYMMDD}_{0000000000}</displayFormat>
        <label>勤怠管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>